--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -7,4 +7,19 @@
   width: 100px;
 }
 
+.header .time {
+  color: white;
+  font-size: 30px;
+  padding: 300px;
+  vertical-align: bottom;
+}
+
+.authBlock {
+  float: right;
+  background-color: #fff;
+}
+
+.authBlock a {
+  color: rgb(0, 0, 0);
+}
   
